# AmazingAgents

./: .gitignore  README.md  requirements.txt
AdvancedAgents/LegacyBridge-SQL-AI/: .env.example  .gitignore  CONNECTION_POOLING.md  PRODUCTION_DEPLOYMENT.md  README.md  pyproject.toml  requirements.txt  run_server.py
AdvancedAgents/LegacyBridge-SQL-AI/data/: chinook.db
AdvancedAgents/LegacyBridge-SQL-AI/src/: __init__.py  cli.py  database.py  schema.py  server.py  server_api.py
AdvancedAgents/LegacyBridge-SQL-AI/tests/: __init__.py  test_connection_pool.py  test_server.py
AdvancedAgents/MCP-Devops-Squad/: .env.example  .gemini.md  .gitignore  README.md  requirements.txt
AdvancedAgents/McK-Consutlancy/: .env.example  .gitignore  CLAUDE.md  HOW_TO_RUN.md  README.md  Start App.bat  Start App.command  build_frontend.command  requirements.txt  setup.sh
AdvancedAgents/ShadowARB/: .gitignore  README.md  TESTING.md  cost_estimator.py  estimate_pr_cost.py  main.py  requirements.txt  sample.env  setup.py  test_github_token.py  test_mock.py
AdvancedAgents/SocialMediaVideoEdit-Gem/: .gitattributes  .gitignore  CLAUDE.md  INSTALL.html  INSTALL.md  SETUP_WINDOWS.html  SETUP_WINDOWS.md  docker-compose.yml  package.sh  setup.bat  setup.sh
AdvancedAgents/rag-docs-query/: OPTIMIZATION_SUMMARY.md  main.py
BasicAgents/CorpVal/: README.md  Text  warren  warren.py
BasicAgents/LyricsGenerator/: README.md  app.py
BasicAgents/SongMaker/: README.md  app.py  requirements.txt
BasicAgents/dailyFinanceGuide/: .env.example  README.md  (+2 more)
SovereignAgents/: MasterPrompt.md
(+120 files in other folders)
